--- a/ecommerce/shop/templates/shop/base.html
+++ b/ecommerce/shop/templates/shop/base.html
@@ -53,7 +53,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/shop">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact Us</a>
