--- a/ecommerce/shop/templates/shop/base.html
+++ b/ecommerce/shop/templates/shop/base.html
@@ -53,16 +53,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/shop">Home</a>
+                <a class="nav-link {% if request.path == '/shop/' %}active{% endif %}"" aria-current="page" href="/shop">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link {% if request.path == '/shop/contactUs/' %}active{% endif %}"" href="/shop/contactUs">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cart</a>
+                <a class="nav-link {% if request.path == '#' %}active{% endif %}"" href="#">Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Whislist</a>
+                <a class="nav-link {% if request.path == '#' %}active{% endif %}"" href="#">Whislist</a>
               </li>
             </ul>
           </div>
@@ -94,5 +94,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </body>
 </html>
