[ADD] shop page and category page

--- a/ecommerce/shop/templates/shop/base.html
+++ b/ecommerce/shop/templates/shop/base.html
@@ -56,6 +56,9 @@
                 <a class="nav-link {% if request.path == '/shop/' %}active{% endif %}"" aria-current="page" href="/shop">Home</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link {% if request.path == '/shop/shop/' %}active{% endif %}"" href="/shop/shop">Shop</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link {% if request.path == '/shop/contactUs/' %}active{% endif %}"" href="/shop/contactUs">Contact Us</a>
               </li>
               <li class="nav-item">
