--- a/ecommerce/shop/templates/shop/contactus.html
+++ b/ecommerce/shop/templates/shop/contactus.html
@@ -2,6 +2,11 @@
 {% block title %}Contact Us{% endblock %}
 {% block body %}
 <div class="container">
+    <div class="row" style="background-color: rgb(37, 29, 29, 00.5);padding: 2%;margin-top: 2%;margin-bottom: 2%;border-radius: 20px;">
+        <div class="col-12">
+            <h1>Contact Us</h1>
+        </div>
+    </div>
     <div class="row">
     <div class="col-lg-7 mt-4 mt-lg-0">
         <p class="lead">
