--- a/ecommerce/shop/templates/shop/base.html
+++ b/ecommerce/shop/templates/shop/base.html
@@ -53,20 +53,33 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link {% if request.path == '/shop/' %}active{% endif %}"" aria-current="page" href="/shop">Home</a>
+                <a class="nav-link {% if request.path == '/shop/' %}active{% endif %}" aria-current="page" href="/shop">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if request.path == '/shop/shop/' %}active{% endif %}"" href="/shop/shop">Shop</a>
+                <a class="nav-link {% if request.path == '/shop/shop/' %}active{% endif %}" href="/shop/shop">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if request.path == '/shop/contactUs/' %}active{% endif %}"" href="/shop/contactUs">Contact Us</a>
+                <a class="nav-link {% if request.path == '/shop/contactUs/' %}active{% endif %}" href="/shop/contactUs">Contact Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if request.path == '#' %}active{% endif %}"" href="#">Cart</a>
+                <a class="nav-link {% if request.path == '#' %}active{% endif %}" href="#">Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if request.path == '#' %}active{% endif %}"" href="#">Whislist</a>
+                <a class="nav-link {% if request.path == '#' %}active{% endif %}" href="#">Whislist</a>
               </li>
+            </ul>
+            <!-- ✅ Authentication Buttons -->
+            <ul class="navbar-nav ms-auto">
+              {% if request.user.is_authenticated %}
+                <li class="nav-item d-flex align-items-center">
+                  <span class="navbar-text text-white me-2">Hello, {{ request.user.username|upper }}</span>
+                  <a class="btn btn-outline-light btn-sm" href="{% url 'shop:logout' %}">Logout</a>
+                </li>
+              {% else %}
+                <li class="nav-item">
+                  <a class="btn btn-outline-light btn-sm" href="{% url 'shop:signin' %}">Sign In</a>
+                </li>
+              {% endif %}
             </ul>
           </div>
         </div>
